--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html
+html(data-ng-app="app")
   head
     title= title
     meta(name="viewport",content="width=device-width, initial-scale=1")
@@ -7,11 +7,9 @@ html
     meta(content="Practice any language, anytime, anywhere!")
     link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
     block head
-  body
-  
+  body  
     block content
     
-    script(src="/bower_components/jquery/dist/jquery.min.js")
-    script(src="/bower_components/bootstrap/dist/js/bootstrap.min.js")
-    script(src="/bower_components/knockout/dist/knockout.js")
+
+    
     block scripts
