--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -1,7 +1,7 @@
 link(rel='stylesheet', href="/stylesheets/index.css")
 link(rel='stylesheet', href="/bower_components/font-awesome/css/font-awesome.min.css")
 
-.modal.fade.rooms-modal(tabindex='-1', role='dialog', aria-labelledby='gridSystemModalLabel')
+.modal.fade.rooms-modal#roomsModal(tabindex='-1', role='dialog', aria-labelledby='gridSystemModalLabel')
       .modal-dialog(role='document')
         .modal-content
           .modal-header
