--- a/views/partials/chatRoom.jade
+++ b/views/partials/chatRoom.jade
@@ -82,6 +82,11 @@ block head
           .modal-header
             h4#gridSystemModalLabel.modal-title Enter you username
           .modal-body
+            .alert.alert-warning.alert-dismissible(role='alert', data-ng-if="ctrl.vm.roomError != ''")
+                button.close(type='button', data-dismiss='alert', aria-label='Close')
+                    span(aria-hidden='true') ×
+                {{ctrl.vm.roomError}}
+             
             input.form-control(type="text", placeholder="Type here your usename",data-ng-model="ctrl.vm.username")  
           .modal-footer
             button.btn.btn-success(type='button', data-dismiss='modal', data-ng-click="ctrl.joinRoom(ctrl.vm.username)") Join
