--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -26,7 +26,7 @@ link(rel='stylesheet', href="/bower_components/font-awesome/css/font-awesome.min
             .col-md-3.col-md-offset-5
                 .logo
                     img.img-responsive.center-block(src="/images/logo128x128.png")
-                    h3.center-block.text-center wetalki
+                    //h3.center-block.text-center wetalki
                     h5.center-block.text-center Practice any language, anytime, anywhere!
                     
                     if error != null
@@ -106,9 +106,9 @@ link(rel='stylesheet', href="/bower_components/font-awesome/css/font-awesome.min
                 br
                 h3.text-center  In Development...
         br
-        .container.marketing
+        .marketing
             .row
-                .col-lg-4
+                .col-md-3.col-md-offset-1
                     div.features-box-icon
                         i.fa.fa-thumbs-o-up
 
@@ -116,7 +116,7 @@ link(rel='stylesheet', href="/bower_components/font-awesome/css/font-awesome.min
                     p.
                         No Sign Up or Registration needed to Chat. We know your time is valuable. It's simple & crafted with love.
                     
-                .col-lg-4
+                .col-md-3.col-md-offset-1
                     div.features-box-icon
                         i.fa.fa-mobile
                 
@@ -125,7 +125,7 @@ link(rel='stylesheet', href="/bower_components/font-awesome/css/font-awesome.min
                         Got iPhone, Android or Tablet? No problem! Chat smoothly on all platforms.
                     
                 // /.col-lg-4
-                .col-lg-4
+                .col-md-3.col-md-offset-1
                     div.features-box-icon
                         i.fa.fa-globe                    
                     h2 Freedom
