--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,14 +1,14 @@
  body {
      color: #5a5a5a;
  }
- .marketing .col-lg-4 {
+ .marketing .col-md-3 {
      margin-bottom: 20px;
      text-align: center;
  }
  .marketing h2 {
      font-weight: normal;
  }
- .marketing .col-lg-4 p {
+ .marketing .col-md-3 p {
      margin-right: 10px;
      margin-left: 10px;
  }
