--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -95,7 +95,7 @@ link(rel='stylesheet', href="/bower_components/font-awesome/css/font-awesome.min
                         option(value="travel") Travel
                         option(value="jobs") Jobs
                 br
-                //h3.text-center  In Development...
+                h3.text-center  In Development...
                 input.btn.btn-success.btn-lg.center-block(type="button",value="Join a room",data-toggle='modal', data-target='.rooms-modal',data-ng-click="ctrl.loadRooms(ctrl.vm.langCodeGroup,ctrl.vm.topicGroup)")
                 br          
             .col-md-3.col-md-offset-1.col-xs-12
