Changed meta description

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html(data-ng-app="app")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="apple-mobile-web-app-status-bar-style" content="yes")
       
-    meta(content="languages, practice languages,sharedtalk, shared talk,wetalk, talk, practice online, chat, chat online, chat languages, pratice language online, chat languages, chat with languages, talk with people, talk languages, wetalki, wetalki languages, wetalki practice languages, practice any language, how to practice languages online, how to practice languages, learn languages,Practice any language, anytime, anywhere!", name="description")
+    meta(content="Practice any language, anytime, anywhere! Practice Languages", name="description")
     
     
     link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
