uncomment wetalki logo text

--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -26,7 +26,7 @@ link(rel='stylesheet', href="/bower_components/font-awesome/css/font-awesome.min
             .col-md-3.col-md-offset-5
                 .logo
                     img.img-responsive.center-block(src="/images/logo128x128.png")
-                    //h3.center-block.text-center wetalki
+                    h3.center-block.text-center wetalki
                     h5.center-block.text-center Practice any language, anytime, anywhere!
                     
                     if error != null
