--- a/views/partials/chatRoom.jade
+++ b/views/partials/chatRoom.jade
@@ -35,6 +35,11 @@ block head
             
             .scrollable
                 .scrollable-content#messageBox
+                    .ads
+                        script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+                        ins.adsbygoogle(style='display:block',data-adtest="on", data-ad-client='ca-pub-8215940757054585', data-ad-slot='2220627754', data-ad-format='auto')
+                        script.
+                            (adsbygoogle = window.adsbygoogle || []).push({});
                     #messageList
                         div#connectedWithPartnerText(data-ng-if="ctrl.vm.isConnectedInRoom") 
                             p.text-center You're now chatting on this room!
