--- a/views/partials/chatRoom.jade
+++ b/views/partials/chatRoom.jade
@@ -37,7 +37,7 @@ block head
                 .scrollable-content#messageBox
                     .ads
                         script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-                        ins.adsbygoogle(style='display:block',data-adtest="on", data-ad-client='ca-pub-8215940757054585', data-ad-slot='2220627754', data-ad-format='auto')
+                        ins.adsbygoogle(style='display:block', data-ad-client='ca-pub-8215940757054585', data-ad-slot='2220627754', data-ad-format='auto')
                         script.
                             (adsbygoogle = window.adsbygoogle || []).push({});
                     #messageList
