trying to fix ads

--- a/views/partials/chat.jade
+++ b/views/partials/chat.jade
@@ -19,6 +19,7 @@ block head
             .scrollable-content
                 .ads
                     script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+                    <!-- wetalki -->
                     ins.adsbygoogle(style='display:block', data-ad-client='ca-pub-8215940757054585', data-ad-slot='2220627754', data-ad-format='auto')
                     script.
                         (adsbygoogle = window.adsbygoogle || []).push({});
