--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -131,14 +131,12 @@ link(rel='stylesheet', href="/bower_components/font-awesome/css/font-awesome.min
              
    
      p.text-center
-            script(async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js")
-            <!-- wetalki home -->
-            ins.adsbygoogle(
-            style="display:inline-block;width:728px;height:90px"
-            data-ad-client="ca-pub-8215940757054585"
-            data-ad-slot="5244486154")
-            script.
-                (adsbygoogle = window.adsbygoogle || []).push({});
+        script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+        // wetalki home
+        ins.adsbygoogle(style='display:inline-block;width:728px;height:90px', data-ad-client='ca-pub-8215940757054585', data-ad-slot='5244486154')
+        script.
+            (adsbygoogle = window.adsbygoogle || []).push({});
+
     
 
     footer.footer
