added angular google adsense module

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,16 +1,16 @@
 extends layout
 block head
+    script(async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js")
     script(src="/bower_components/angular/angular.min.js")
         
 block content
-    .div.ng-cloak(data-ng-view,data-ng-cloak)
+    div(data-ng-view,data-ng-cloak)
 
 
 block scripts
     // Libs
     script(src="/bower_components/jquery/dist/jquery.min.js")
     script(src="/bower_components/bootstrap/dist/js/bootstrap.min.js")
-    script(src="/bower_components/knockout/dist/knockout.js")
     
     
     script(src="/bower_components/angular-route/angular-route.min.js")
@@ -19,6 +19,7 @@ block scripts
     
     script(src="/bower_components/lodash/dist/lodash.min.js")
     script(src="/bower_components/ng-lodash/build/ng-lodash.min.js")
+    script(src="/bower_components/angular-google-adsense/dist/angular-google-adsense.min.js")
     
     script(src="/javascripts/socket.io-1.4.5.js")
     ///
@@ -33,8 +34,12 @@ block scripts
     script(src="/app/chatRoom/chatRoomController.js")
     script(src="/app/chatRoom/chatRoomViewModel.js")
     
+    script(src="/app/adsense/adsenseDirective.js")
+    
     script(src="/app/services/languageService.js")
     script(src="/app/services/roomService.js")
+    
+    
 
     <!-- Facebook Pixel Code -->
     script.
