--- a/views/partials/chat.jade
+++ b/views/partials/chat.jade
@@ -18,11 +18,8 @@ block head
         .scrollable
             .scrollable-content
                 .ads
-                    script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-                    <!-- wetalki -->
-                    ins.adsbygoogle(style='display:block', data-ad-client='ca-pub-8215940757054585', data-ad-slot='2220627754', data-ad-format='auto')
-                    script.
-                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    //adsense(ad-client="ca-pub-8215940757054585", ad-slot="2220627754", inline-style="display:inline-block;height:100%;width:100%")
+                    adsense(ad-client="ca-pub-8215940757054585" ad-slot="2220627754" ad-format="auto" inline-style="display:block")
                     
                 #messageList
                      
