--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,7 @@ block scripts
     
     script(src="/bower_components/lodash/dist/lodash.min.js")
     script(src="/bower_components/ng-lodash/build/ng-lodash.min.js")
-    script(src="/bower_components/angular-google-adsense/dist/angular-google-adsense.min.js")
+    script(src="/bower_components/angular-google-adsense/dist/angular-google-adsense.js")
     
     script(src="/javascripts/socket.io-1.4.5.js")
     ///
