--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -134,7 +134,7 @@ link(rel='stylesheet', href="/bower_components/font-awesome/css/font-awesome.min
         //div(data-adsense,style='display:inline-block;width:728px;height:90px')
         
         //adsense(ad-client="ca-pub-8215940757054585" ad-slot="2220627754" inline-style="display:inline-block;width:728px;height:90px")
-
+        adsense(ad-client="ca-pub-8215940757054585" ad-slot="2220627754" ad-format="auto" inline-style="display:block")
 
     footer.footer
       .container
