removed ads from chats

--- a/views/partials/chat.jade
+++ b/views/partials/chat.jade
@@ -17,9 +17,9 @@ block head
           
         .scrollable
             .scrollable-content
-                .ads
+                //.ads
                     //adsense(ad-client="ca-pub-8215940757054585", ad-slot="2220627754", inline-style="display:inline-block;height:100%;width:100%")
-                    adsense(ad-client="ca-pub-8215940757054585" ad-slot="2220627754" ad-format="auto" inline-style="display:block")
+                    //adsense(ad-client="ca-pub-8215940757054585" ad-slot="2220627754" ad-format="auto" inline-style="display:block")
                     
                 #messageList
                      
