--- a/views/partials/chatRoom.jade
+++ b/views/partials/chatRoom.jade
@@ -35,8 +35,8 @@ block head
             
             .scrollable
                 .scrollable-content#messageBox
-                    .ads
-                        adsense(ad-client="ca-pub-8215940757054585" ad-slot="2220627754" ad-format="auto" inline-style="display:block")
+                    //.ads
+                        //adsense(ad-client="ca-pub-8215940757054585" ad-slot="2220627754" ad-format="auto" inline-style="display:block")
                      
                     #messageList
                         div#connectedWithPartnerText(data-ng-if="ctrl.vm.isConnectedInRoom") 
