changed home design

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,9 @@ block scripts
     // Libs
     script(src="/bower_components/jquery/dist/jquery.min.js")
     script(src="/bower_components/bootstrap/dist/js/bootstrap.min.js")
-    
+    script(src="/libs/jquery-easing-plugin/jquery.easing.min.js")
+    script(src="/bower_components/classie/classie.js")
+    script(src="/bower_components/cbp-animated-header-fork/js/cbpAnimatedHeader.js")
     
     script(src="/bower_components/angular-route/angular-route.min.js")
     
@@ -23,6 +25,8 @@ block scripts
     
     script(src="/javascripts/socket.io-1.4.5.js")
     ///
+    script(src="/javascripts/index.js")
+    
     script(src="/app/app.js")
     
     script(src="/app/index/indexController.js")
@@ -35,10 +39,10 @@ block scripts
     script(src="/app/chatRoom/chatRoomViewModel.js")
     
     script(src="/app/adsense/adsenseDirective.js")
+    script(src="/app/modalRoom/modalRoomDirective.js")
     
     script(src="/app/services/languageService.js")
     script(src="/app/services/roomService.js")
-    
     
 
     <!-- Facebook Pixel Code -->
