--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,11 +10,11 @@ html(data-ng-app="app")
     meta(content="Practice any language, anytime, anywhere! Practice Languages", name="description")
     
     
-    link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/bower_components/bootstrap-theme-bootswatch-flatly/css/bootstrap.min.css')
 
     base(href="/")
     block head
-  body
+  body#page-top.index
     block content
     
 
