--- a/public/app/dashboard/directives/chat/partials/directChatBox.html
+++ b/public/app/dashboard/directives/chat/partials/directChatBox.html
@@ -45,11 +45,11 @@
         <!-- Contacts are loaded here -->
         <div class="direct-chat-contacts">
             <ul class="contacts-list">
-                <li>
-                    <a href="#">
+                <li data-ng-repeat="contact in vm.contacts">
+                    <a href="#" >
                         <img class="contacts-list-img" src="/template/adminLTE/img/nophoto.png" alt="User Image">
 
-                        <div class="contacts-list-info" data-ng-repeat="contact in vm.contacts">
+                        <div class="contacts-list-info" >
                             <span class="contacts-list-name">
                               {{::contact.name}}
                               <!--<small class="contacts-list-date pull-right">2/28/2015</small>-->
