--- a/public/template/adminLTE/css/AdminLTE.css
+++ b/public/template/adminLTE/css/AdminLTE.css
@@ -1525,13 +1525,14 @@ a:focus {
  * --------------
  */
 .box {
-  position: relative;
+  position: absolute;
   border-radius: 3px;
   background: #ffffff;
   border-top: 3px solid #d2d6de;
   margin-bottom: 20px;
   width: 100%;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+z-index: 999999;
 }
 .box.box-primary {
   border-top-color: #3c8dbc;
