--- a/views/dashboard/layout.jade
+++ b/views/dashboard/layout.jade
@@ -16,8 +16,10 @@ head
   link(rel="stylesheet", href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css")
  
 
-  link(rel='stylesheet', href='/template/adminLTE/css/AdminLTE.min.css')
+  link(rel='stylesheet', href='/template/adminLTE/css/AdminLTE.css')
   link(rel='stylesheet', href='/template/adminLTE/css/skins/skin-blue.min.css')
+  
+  link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css')
   
   script(src="/bower_components/angular/angular.min.js")
   
@@ -25,7 +27,7 @@ head
     script(src='https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js')
     script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
     
-body.hold-transition.skin-blue.sidebar-mini(data-ng-controller="DashboardController as vm", ng-cloak)
+body.hold-transition.skin-blue.sidebar-mini.sidebar-collapse(data-ng-controller="DashboardController as vm", ng-cloak)
 .wrapper
   // Main Header
   header.main-header
@@ -33,8 +35,8 @@ body.hold-transition.skin-blue.sidebar-mini(data-ng-controller="DashboardControl
     a.logo(href='/dashboard')
       // mini logo for sidebar mini 50x50 pixels
       span.logo-mini
-        b W
-        | TK
+        img(src="/images/logo32x32.png")
+       
       // logo for regular state and mobile devices
       span.logo-lg
         b Wetalki
@@ -210,11 +212,11 @@ body.hold-transition.skin-blue.sidebar-mini(data-ng-controller="DashboardControl
   footer.main-footer
     // To the right
     .pull-right.hidden-xs
-      | Anything you want
+      | Practice any language, anytime, anywhere
     // Default to the left
     strong
-      | Copyright © 2015 
-      a(href='#') Company
+      | Copyright © 2016
+      a(href='/', target="_blank")  Wetalki
       | .
     |  All rights reserved.
   // Control Sidebar
@@ -278,13 +280,17 @@ script(src='/bower_components/jquery/dist/jquery.min.js')
 
 script(src="https://code.jquery.com/ui/1.12.0-rc.1/jquery-ui.min.js", integrity="sha256-mFypf4R+nyQVTrc8dBd0DKddGB5AedThU73sLmLWdc0=" ,  crossorigin="anonymous")
 
+// Bootstrap 3.3.6
+script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
+
 script(src="/bower_components/angular-dragdrop/src/angular-dragdrop.min.js")
+script(src='/bower_components/noty/js/noty/packaged/jquery.noty.packaged.min.js')
 script(src="/bower_components/socket.io-client/socket.io.js")
 script(src='/bower_components/ng-lodash/build/ng-lodash.min.js')
 script(src='/bower_components/moment/moment.js')
 
-// Bootstrap 3.3.6
-script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
+
+
 // AdminLTE App
 script(src='/template/adminLTE/js/app.min.js')
 
