--- a/views/site/layout.jade
+++ b/views/site/layout.jade
@@ -21,6 +21,13 @@ html
     //script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
     //script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
     //script(src='/bower_components/modernizr/modernizr.js')
+    script.
+      (function(){
+        if (window.sessionStorage.token && window.sessionStorage.user) {
+          location.href = '/dashboard';
+          return false;
+        }
+      })();
 
     block head
   body
